<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1" >

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/tracks"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/lightCreamsicle" />

        <TextView
            android:id="@+id/running_time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="6dp"
            android:text="@string/total_length"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/creamsicle" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete_playlist"
        android:src="@drawable/ic_menu_delete" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/play"
        android:src="@drawable/ic_menu_play_clip" />

</LinearLayout>