<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ImageView
        android:id="@+id/type_icon"
        android:layout_width="50dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:contentDescription="@string/album" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textColor="@android:color/white"
        android:textAlignment="gravity"
        android:gravity="center_vertical"
        android:paddingLeft="6dp"
        android:textSize="30sp"
        android:text="@string/title" />

    <ImageButton
        android:id="@+id/select_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select"
        android:src="@drawable/ic_menu_forward" />
</LinearLayout>